# FITS

./: .gitignore  CMakeLists.txt  README.md  test.fit
include/: constants.h  data.h  definitions.h  exceptions.h  fcn_templates.hpp  fits.h  hdu.h  header.h  keyword.h  utils.h
src/: fits.cpp  hdu.cpp  header.cpp  keyword.cpp  utils.cpp
tests/: main.cpp
